--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           id="image"
           alt="Login"
           class="search"
-          src="images/Search.svg"
+          src="Images/Search.svg"
         />
       </form>
       <div class="show-container rounded">
